sdk/packages/modal/src/components/nightly-wallet-selector-page/nightly-wallet-selector-page.css
.walletSelectorPage {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 464px;
  justify-content: center;
  align-items: center;
  background-color: #202137;
}

@media (max-width: 960px) {
  .walletSelectorPage {
    height: 368px;
  }
}

.walletSelectorPage::before {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 32px;
  background: linear-gradient(180deg, rgba(15, 15, 26, 0) 0%, #0f0f1a 100%);
  opacity: 0.7;
  pointer-events: none;
  z-index: 1;
}

.contentContainer {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-direction: column;
  height: 100%;
  overflow-x: hidden;
  scrollbar-width: none;
}

.contentContainer::-webkit-scrollbar {
  display: none;
}

@media (max-width: 1080px) {
  .walletSelectorPage,
  .recentDetectedContainer {
    width: 204px;
  }
}

.walletSelectorHeader {
  padding: 16px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.walletSelectorHeader span {
  font-weight: 400;
  font-size: 16px;
  line-height: 22px;
  color: #707a8d;
}
.walletSelectorBlockchain {
  gap: 4px;
  display: flex;
  align-items: center;
}
.walletSelectorBlockchain span {
  color: #6067f9;
}
.walletSelectorBlockchain img {
  width: 24px;
  height: 24px;
  border-radius: 100%;
}
.walletInputSearchContainer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 16px;
  padding: 8px;
  width: 256px;
  height: 32px;
  background-color: #0f0f1a;
  border-radius: 8px;
}
@media (max-width: 1080px) {
  .walletInputSearchContainer {
    width: 176px;
  }
}
.walletInputSearchContainer img {
  width: 20px;
  height: 20px;
}
.walletInputSearch {
  background-color: #0f0f1a;
  color: #707a8d;
  font-size: 14px;
  width: 99%;
  line-height: 22px;
  letter-spacing: 0.02em;
  border: 0;
}
.walletInputSearch:focus {
  outline: none;
}
.NotFoundContainer {
  padding-top: 16px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.NotFoundHeading {
  padding-top: 16px;
  color: #f7f7f7;
  font-weight: 700;
  font-size: 16px;
  line-height: 22px;
  letter-spacing: 0.02em;
}
.NotFoundInfo {
  padding-top: 4px;
  width: 171px;
  color: #707a8d;
  text-align: center;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.02em;
}
.NotFoundGif {
  width: 104px;
  height: 216px;
}
.otherItemsContainer {
  width: 264px;
  border-radius: 8px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  justify-content: center;
  align-items: center;
}

.recentDetectedContainer {
  background-color: #343551;
  width: 264px;
  border-radius: 8px;
  padding: 8px;
  margin-bottom: 12px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  justify-content: center;
  align-items: center;
}

@media (max-width: 1080px) {
  .otherItemsContainer,
  .recentDetectedContainer {
    width: 176px;
    grid-template-columns: 1fr 1fr;
  }
}

@media (max-width: 640px) {
  .otherItemsContainer,
  .recentDetectedContainer {
    width: 176px;
  }
}

.walletSelectorButtons {
  max-height: 100%;
  overflow-y: scroll;
  scrollbar-width: none;
  padding-top: 8px;
  padding-bottom: 16px;
}

.walletInputSearchWrapper {
  position: relative;
  margin-bottom: 8px;
}

.walletInputSearchWrapper::before {
  content: '';
  position: absolute;
  bottom: -20px;
  left: 0;
  right: 0;
  height: 20px;
  background: linear-gradient(180deg, #202137 0%, #202137 50%, #20213700 100%);
  opacity: 1;
  pointer-events: none;
  z-index: 1;
}

